test/trivial/bradc/undefinedfn2.good
undefinedfn2.chpl:1: In function 'main':
undefinedfn2.chpl:3: error: unresolved call 'foo(int(64))'
